Fix one more use of function return refer to temp variable.

BUG: 352618
REVIEW: 125404